<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ER DRAWER</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_dialog">Add an element</string>
    <string name="title_activity_add_dialog_domain">Add a domain</string>
    <string name="title_activity_add_dialog_entity">Add an entity</string>
    <string name="title_activity_add_dialog_relation">Add a relation</string>
    <string name="title_activity_add_dialog_attribute">Add an attribute</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="element_name">Name of the element</string>
    <string name="entity_weak">Weak</string>
    <string name="domain_def_value">Default value</string>
    <string name="of_relation">Of relation: </string>
    <string name="associations">Asociations: </string>
    <string name="entity">Entity: </string>
    <string name="title_activity_add_domain">Add a Domain</string>
    <string name="title_activity_add_entity">Add an Entity</string>
    <string name="title_activity_add_relation">Add a Relation</string>
    <string name="title_activity_add_attribute">Add an Attribute</string>
    <string name="restrictions">Restrictions: </string>
    <string name="restriction">Write here the new restriction</string>
    <string name="domain">Domain: </string>
    <string name="att_PK">Primary Key</string>
    <string name="att_Nullable">Nullable</string>
    <string name="att_Unique">Unique</string>
    <string name="error_name_needed">Name is mandatory</string>
    <string name="error_no_relations">There are no relations</string>
    <string name="error_no_entities">There are no entities</string>
    <string name="error_no_writen_restriction">You need to fill the restriction</string>
    <string name="title_activity_init">ER DRAWER</string>
    <string name="background">Background</string>

    <string-array name="menu_options">
        <item>New</item>
        <item>Search</item>
        <item>Settings</item>
    </string-array>
    <array name="menu_icons">
        <item>@drawable/ic_action_new</item>
        <item>@drawable/ic_action_search</item>
        <item>@drawable/ic_action_settings</item>
    </array>
    
</resources>
