<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:hint="@string/element_name" />

        <LinearLayout
            android:id="@+id/optionsAttribute1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDomains"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/domain" />

            <Spinner
                android:id="@+id/spDomains"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6" />
            
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/optionsAttribute2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkPrimaryKey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/att_PK" 
                android:layout_weight="1"/>
			<CheckBox
                android:id="@+id/checkNullable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/att_Nullable" 
                android:layout_weight="1"/>
			<CheckBox
                android:id="@+id/checkUnique"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/att_Unique" 
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/acceptCancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main"
        android:layout_marginTop="18dp"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnAccept"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accept" />

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>