<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:hint="@string/element_name" />

        <LinearLayout
            android:id="@+id/optionsEntity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkWeak"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:enabled="false"
                android:text="@string/entity_weak" />

            <TextView
                android:id="@+id/tvOfRelation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/of_relation" />

            <Spinner
                android:id="@+id/spWeakOfRelation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            
        </LinearLayout>
        <TextView
                android:id="@+id/tvNoRelations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/error_no_relations" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/acceptCancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main"
        android:layout_marginTop="18dp"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnAccept"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accept" />

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>