<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:hint="@string/element_name" />

        <EditText
            android:id="@+id/etDefaultValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:hint="@string/domain_def_value" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/restrictions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main"
        android:layout_marginTop="16dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvRestrictions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/restrictions" />

        <Spinner
            android:id="@+id/spRestrictions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4" />

        <ImageButton
            android:id="@+id/btnAddRes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:src="@drawable/add_little" />

        <ImageButton
            android:id="@+id/btnEditRes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:src="@drawable/edit_little" />

        <ImageButton
            android:id="@+id/btnRemoveRes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:src="@drawable/remove_little" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addRestriction"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/restrictions"
        android:orientation="horizontal" 
        android:visibility="invisible"
        android:layout_marginTop="12dp">
		<EditText
            android:id="@+id/etAddRestriction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:hint="@string/restriction"
            android:layout_weight="8" />
        <ImageButton
            android:id="@+id/btnAcceptRes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/accept_little" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/acceptCancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addRestriction"
        android:layout_marginTop="18dp"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnAccept"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accept" />

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>